Refactor translation scripts to use domain variable and improve JSON generation
- Updated generate-json.sh to accept an optional version argument and use a domain variable for file naming.
- Enhanced error handling for missing PO files and improved output messages.
- Modified generate-mo.sh to utilize the domain variable for consistency in file naming.
- Revised generate-po.sh to check for the existence of the POT file in the languages directory and preserve existing translations during PO file creation.
- Added a new ratepress.pot file containing translation strings for the RatePress project.

--- a/languages/fa_IR/ratepress-admin-fa_IR-1.0.0.json
+++ b/languages/fa_IR/ratepress-admin-fa_IR-1.0.0.json
@@ -1,7 +1,7 @@
 {
-    "translation-revision-date": "2025-10-09T03:56:13.361Z",
-    "generator": "RatePress Custom JSON Generator",
-    "source": "core/languages/ratepress-fa_IR.po",
+    "translation-revision-date": "2025-10-09T05:41:24.655Z",
+    "generator": "RatePress JSON Generator",
+    "source": "languages/fa_IR/ratepress-fa_IR.po",
     "domain": "ratepress",
     "locale_data": {
         "ratepress": {
@@ -63,6 +63,15 @@
             ],
             "Invalid cooldown value": [
                 "مقدار زمان انتظار نامعتبر است"
+            ],
+            "Download Translation": [
+                "دانلود به صورت CSV"
+            ],
+            "Downloading...": [
+                "در حال حذف..."
+            ],
+            "Failed to download translation": [
+                "بارگذاری قالب‌ها ناموفق بود"
             ],
             "Star rating widget": [
                 "ابزارک امتیازدهی ستاره‌ای"
