--- a/languages/es_ES/ratepress-es_ES.po
+++ b/languages/es_ES/ratepress-es_ES.po
@@ -2,15 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2025-10-09T06:04:00+00:00\n"
+"PO-Revision-Date: 2025-10-09T05:49:17+00:00\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-10-09T06:04:13+00:00\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.12.0\n"
 "X-Domain: ratepress\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: core/includes/Admin/AdminPanel.php:54 core/includes/Admin/AdminPanel.php:55
 #: core/includes/Blocks/BlockRenderer.php:115
